<resources>
    <!-- Tabs strings -->
    <string name="app_name">Application</string>
    <string name="log_tab">Log</string>
    <string name="history_tab">History</string>
    <string name="score_tab">Score</string>
    <string name="settings_tab">Settings</string>
    <string name="action_settings">Settings</string>

    <!-- Settings tab strings -->
    <string name="haveAccountButton">I already have an account</string>
    <string name="clearButton">Clear</string>
    <string name="charNameLabel">Your character name:</string>
    <string name="availableLabel">Available?</string>
    <string name="fullNameLabel">Full name (private, not listed):</string>
    <string name="passwordLabel">Choose a password:</string>
    <string name="pictureLabel">Share your picture (optional):</string>
    <string name="saveButton">Save</string>
    <string name="confirmPassword">Retype your password to confirm:</string>
    <string name="changeProfile">Change</string>
    <string name="profileFileName">profile_photo.png</string>
    <string name="profileSaveText">Saved User Information</string>
    <string name="password_status">Passwords Match</string>

    <!-- Shared Pref key names -->
    <string name="saved_info">Saved Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
